tests/ui/lint/snapshots/fix_redundant_closure_call_single_item_block.snap
---
source: tests/ui/lint/fixes.rs
---
pub fn f() -> int {
  (|| { compute() })()
}

fn compute() -> int { 42 }
=== fixed ===
pub fn f() -> int {
  compute()
}

fn compute() -> int { 42 }
