tests/ui/lint/snapshots/fix_redundant_else_nested_body.snap
---
source: tests/ui/lint/fixes.rs
---
fn log(n: int) {}

pub fn f(x: int) {
  if x > 0 {
    return
  } else {
    if x < -5 {
      log(1)
    }
    log(2)
  }
  log(3)
}
=== fixed ===
fn log(n: int) {}

pub fn f(x: int) {
  if x > 0 {
    return
  }
  if x < -5 {
    log(1)
  }
  log(2)
  log(3)
}
