tests/ui/lint/snapshots/fix_redundant_else_single_line.snap
---
source: tests/ui/lint/fixes.rs
---
fn log(n: int) {}

pub fn f(x: int) {
  if x > 0 { return } else { log(x) }
  log(0)
}
=== fixed ===
fn log(n: int) {}

pub fn f(x: int) {
  if x > 0 { return }
  log(x)
  log(0)
}
