tests/ui/lint/snapshots/fix_redundant_fstring_conversion.snap
---
source: tests/ui/lint/fixes.rs
---
import "go:strconv"

pub fn f(x: int) -> string {
  f"n={strconv.Itoa(x)}"
}
=== fixed ===
import "go:strconv"

pub fn f(x: int) -> string {
  f"n={x}"
}
