tests/ui/lint/snapshots/fix_redundant_guards_bare_binding.snap
---
source: tests/ui/lint/fixes.rs
---
pub fn f(n: int) -> int {
  match n {
    x if x == 5 => 1,
    _ => 0,
  }
}
=== fixed ===
pub fn f(n: int) -> int {
  match n {
    5 => 1,
    _ => 0,
  }
}
