tests/ui/lint/snapshots/fix_redundant_import_alias.snap
---
source: tests/ui/lint/fixes.rs
---
import fmt "go:fmt"

fn main() {
  fmt.Println("hi")
}
=== fixed ===
import "go:fmt"

fn main() {
  fmt.Println("hi")
}
