tests/ui/lint/snapshots/fix_redundant_operation_constant.snap
---
source: tests/ui/lint/fixes.rs
---
fn main() {
  let x = 5
  let _ = x * 0
}
=== fixed ===
fn main() {
  let x = 5
  let _ = 0
}
